# Rust-WARP-Cookie-Based-Authentication

./: .env  Cargo.toml
migrations/: 20240403214342_init.up.sql
src/: config.rs  email.rs  handler.rs  jwt_auth.rs  main.rs  model.rs  response.rs
